<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">
    <EditText
        android:id="@+id/editTextEmployeeID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/employee_id"
        android:maxLines="1"
        android:inputType="text"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:ems="10"
        android:maxLines="1"
        android:inputType="textPersonName"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="133dp"
        android:ems="10"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address" />

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="220dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="189dp">

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male" />

    </RadioGroup>

    <EditText
        android:id="@+id/editTextAccessCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:maxLines="1"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/access_code" />

    <EditText
        android:id="@+id/editTextConfirmAccessCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextAccessCode"
        android:layout_centerHorizontal="true"
        android:maxLines="1"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/confirm_access_code" />

    <Spinner
        android:id="@+id/spinnerDepartment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="151dp"
        android:ems="10"
        android:hint="@string/department"/>

    <CheckBox
        android:id="@+id/checkBoxAgree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/editTextEmployeeID"
        android:layout_marginBottom="111dp"
        android:checked="false"
        android:text="@string/i_agree" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/editTextEmployeeID"
        android:layout_marginBottom="49dp"
        android:text="@string/submit" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editTextEmployeeID"
        android:layout_alignTop="@+id/button_submit"
        android:text="@string/reset" />

</RelativeLayout>