<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeeViewActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="61dp"
        android:text="@string/employee_id" />

    <TextView
        android:id="@+id/textViewEmployeeID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView"
        android:layout_marginStart="144dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="106dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewEmployeeID"
        android:layout_alignTop="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="153dp"
        android:text="@string/email" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewEmployeeID"
        android:layout_alignTop="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="197dp"
        android:text="@string/gender" />

    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewEmployeeID"
        android:layout_alignTop="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_centerVertical="true"
        android:text="@string/department" />

    <TextView
        android:id="@+id/textViewDepartment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewEmployeeID"
        android:layout_centerVertical="true" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginBottom="25dp"
        android:text="LOGOUT" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/buttonLogout"
        android:layout_marginEnd="22dp"
        android:text="DELETE ACCOUNT" />

</RelativeLayout>