<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="65dp"
        android:text="@string/employee_id" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="129dp"
        android:text="@string/access_code" />

    <EditText
        android:id="@+id/editTextEmployeeID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextAccessCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextEmployeeID"
        android:layout_alignTop="@+id/textView4"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editTextEmployeeID"
        android:layout_marginTop="202dp"
        android:text="@string/login" />

</RelativeLayout>